# pioneer_array_metbk_storms

./: .gitignore  README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
docs/: api.rst  conf.py  environment.yml  index.rst
notebooks/: 01-Plot_Bomb_Cyclone.ipynb  02-bomb-cyclone-case-study.ipynb  03-barometric-pressure-lows-statistical-analysis.ipynb
tests/: test_dummy.py
